--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,15 @@
 .navbar {
   background: rgb(2, 36, 103);
   max-width: 100%;
+  color: #fff;
+}
+
+.flex-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: #fff;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .navbar > div {
